--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <!-- Ketik code Anda disini -->
+    <header>
+      <div class="header-left">
+          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+      </div>
+        <div class="header-right">
+          <ul>
+            <li>Tentang</li>
+            <li>Pelajaran</li>
+            <li>Hubungi Kami</li>
+          </ul>
+        </div>
+    </header>
+    <div class="top-wrapper">
+    </div>
+    <div class="lesson-wrapper">
+    </div>
+    <div class="message-wrapper">
+    </div>
+    <footer>
+      
+    </footer>
+    
+  </body>
+</html>
 
